// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers config should handle buildConfig 1`] = `
Object {
  "configs": Object {
    "default": Array [
      Object {
        "name": "testBuild",
      },
    ],
  },
}
`;

exports[`reducers config should handle initConfigAsync 1`] = `
Object {
  "configs": Object {
    "test": "testInitFile",
  },
}
`;

exports[`reducers config should handle initial state 1`] = `
Object {
  "configs": Object {},
}
`;

exports[`reducers config should handle resetConfig 1`] = `
Object {
  "configs": undefined,
}
`;

exports[`reducers config should handle resetConfigAsync 1`] = `
Object {
  "configs": Object {
    "test": "testInitDefaultFile",
  },
}
`;

exports[`reducers config should handle saveConfig 1`] = `
Object {
  "configs": Object {
    "default": Array [],
  },
}
`;

exports[`reducers config should handle updateConfig 1`] = `
Object {
  "configs": Object {
    "default": Array [
      Object {
        "name": "testDefault",
      },
    ],
    "other": Array [
      Object {
        "name": "testUpdate",
      },
    ],
  },
}
`;
